--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 body {
-    background-image: url(candy.png);
+    background: url(candy.png) no-repeat center center fixed;
+    background-size: cover;
+    background-color: #f0f0f0;
 }
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 
 #form {
 
@@ -30,5 +25,5 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    justify-content: space-around;
+
 }
